added initial implementation of GET /orders/{id} endpoint
