# internal/handler/orders/transport.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"net/http"
 
+	"github.com/google/uuid"
 	"github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/model/order"
 	server_http "github.com/talense-tasks/backend-trainee-assignment-autumn-2026-markgredasov-5b2b61ca/internal/server/http/server"
 )
@@ -14,6 +15,7 @@ type handler struct {
 
 type orderService interface {
 	CreateOrder(ctx context.Context, o order.Order) (order.Order, error)
+	GetOrder(ctx context.Context, id uuid.UUID) (order.Order, error)
 }
 
 func New(service orderService) *handler {
@@ -28,6 +30,11 @@ func (h *handler) Routes() []server_http.Route {
 			Method:  http.MethodPost,
 			Path:    "/orders",
 			Handler: h.CreateOrder,
+		},
+		{
+			Method:  http.MethodGet,
+			Path:    "/orders/{id}",
+			Handler: h.GetOrder,
 		},
 	}
 }
